# libms3d

./: .gitignore  CMakeLists.txt  MS3DFile.cpp  MS3DFile.h  MS3DFileI.h  MS3DFileIO.cpp  Makefile  OLDMakefile  README.md  Shader.cpp  Shader.h  Textures.cpp  Textures.h  optimizations.cpp  optimizer.cpp  shaders.cpp  shaders.h
shaders/: frag.shader  vert.shader
